--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "acrcloud": "^1.4.0",
    "music-lyrics": "^2.0.2",
 
-"json2csv": "^6.2.0",
+"json2csv": "6.0.0-alpha.2",
 
    
    "node-lyrics": "^2.1.3",
